[package]
name = "safe-decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "onchain"
path = "src/onchain/main.rs"

[[bin]]
name = "offchain"
path = "src/offchain/main.rs"

[dependencies]
alloy = { version = "0.2.1", features = [
    "full",
    "node-bindings",
    "rpc-types-debug",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }
# alloy additional
alloy-eips = "0.3.1"

# url
url = "2.5.2"

# async
tokio = "1"

# misc
serde_json = "1.0.117"

csv = "1"
clap = {version = "4.5.17", features = [ "derive" ]}
clap_derive = "4.5.13"
serde = { version = "1.0.210", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"